# bee-agent-framework

./: .env.template  .env.test  .gitignore  .gitmodules  .lintstagedrc.json  .release-it.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DockerFile  Dockerfile  README.md  SECURITY.md  commitlint.config.ts  docker-compose.yml  eslint.config.js  mise.local.toml-example  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.githooks/: hook.sh  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
apps/api/: pyproject.toml
apps/api/src/beeai_api/: __init__.py  application.py  bootstrap.py  configuration.py  logging_config.py  scripts.py
apps/api/src/beeai_api/adapters/: filesystem.py  interface.py
apps/api/src/beeai_api/domain/: model.py  services.py
apps/api/src/beeai_api/routes/: dependencies.py  mcp_sse.py  provider.py  registry.py
apps/api/src/beeai_api/services/: mcp_proxy.py  provider.py  registry.py
apps/api/src/beeai_server/: application.py  configuration.py  logging_config.py  schema.py
apps/api/src/beeai_server/adapters/: filesystem.py
apps/api/src/beeai_server/routes/: dependencies.py  provider.py
apps/api/src/beeai_server/services/: mcp_proxy.py  provider.py
apps/beeai-server/: pyproject.toml
apps/beeai-server/src/beeai_server/: application.py  bootstrap.py  configuration.py  logging_config.py  scripts.py  static
apps/beeai-server/src/beeai_server/adapters/: interface.py
apps/beeai-server/src/beeai_server/routes/: mcp_sse.py
apps/beeai-server/src/beeai_server/services/mcp_proxy/: notification_hub.py  provider.py  proxy_server.py
apps/beeai-server/src/beeai_server/utils/: periodic.py
apps/beeai_cli/: README.md  pyproject.toml
apps/beeai_cli/src/beeai_cli/: __init__.py  api.py  configuration.py  utils.py
apps/beeai_cli/src/beeai_cli/commands/: agent.py  provider.py  tool.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _sidebar.md  agents.md  backend.md  cache.md  dev_tools.md  emitter.md  errors.md  examples.md  ibm-granite.md  index.html  instrumentation.md  integrations.md  llms.md  logger.md  memory.md  migration_guide.md  native-telemetry.md  overview.md  searxng-tool.md  (+7 more)
examples/simple-agent/: README.md  pyproject.toml
examples/simple-agent/mcp_simple_agent/: server.py
examples/simple-tool/: pyproject.toml
examples/simple-tool/mcp_simple_tool/: server.py
python/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
python/beeai_framework/: __init__.py  cancellation.py  context.py  errors.py
python/beeai_framework/adapters/: __init__.py
python/beeai_framework/adapters/litellm/: chat.py
python/beeai_framework/adapters/ollama/backend/: chat.py
python/beeai_framework/adapters/watsonx/backend/: chat.py
python/beeai_framework/agents/: __init__.py  base.py  errors.py  types.py
python/beeai_framework/agents/bee/: __init__.py  agent.py
python/beeai_framework/agents/runners/: base.py
python/beeai_framework/agents/runners/default/: prompts.py  runner.py
python/beeai_framework/agents/runners/granite/: prompts.py  runner.py
python/beeai_framework/backend/: __init__.py  chat.py  constants.py  errors.py  message.py  utils.py
python/beeai_framework/emitter/: __init__.py  emitter.py  errors.py  types.py  utils.py
python/beeai_framework/llms/: __init__.py  base_output.py  llm.py  output.py
python/beeai_framework/memory/: __init__.py  base_cache.py  base_memory.py  errors.py  file_cache.py  readonly_memory.py  serializable.py  serializer.py  sliding_cache.py  sliding_memory.py  summarize_memory.py  task_map.py  token_memory.py  unconstrained_cache.py  unconstrained_memory.py
python/beeai_framework/parsers/: field.py  line_prefix.py
python/beeai_framework/tools/: __init__.py  errors.py  mcp_tools.py  tool.py
python/beeai_framework/tools/search/: __init__.py  base.py  duckduckgo.py  wikipedia.py
python/beeai_framework/tools/weather/: openmeteo.py
python/beeai_framework/utils/: __init__.py  _types.py  config.py  counter.py  custom_logger.py  errors.py  events.py  models.py  regex.py  strings.py  templates.py
python/beeai_framework/workflows/: __init__.py  agent.py  errors.py  workflow.py
python/cz_commitizen/: __init__.py  monorepo_commits.py
python/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _sidebar.md  agents.md  backend.md  cache.md  emitter.md  errors.md  index.html  instrumentation.md  integrations.md  logger.md  memory.md  overview.md  searxng-tool.md  serialization.md  sql-tool.md  templates.md  tools.md  tutorials.md  version.md  workflows.md
python/examples/: README.md  basic.py  llms.py  requirements.txt
python/examples/agents/: README.md  bee.py  bee_advanced.py  granite.py  memory.py  requirements.txt  simple.py
python/examples/backend/providers/: ollama.py  watsonx.py
python/examples/helpers/: io.py
python/examples/memory/: agentMemory.py  slidingMemory.py  summarizeMemory.py  tokenMemory.py  unconstrainedMemory.py
python/examples/notebooks/: README.md  agents.ipynb  basics.ipynb  requirements.txt  searXNG.md  watsonx.ipynb  workflows.ipynb
python/examples/runners/: basic_runner.py
python/examples/templates/: agent_sys_prompt.py  basic_functions.py  basic_template.py
python/examples/tools/: decorator.py  duckduckgo.py  openmeteo.py  wikipedia.py
python/examples/workflows/: advanced.py  memory.py  multi_agents.py  simple.py  web_agent.py
python/scripts/: absolute_links.py  copyright.sh
python/tests/: __init__.py  conftest.py  errors_test.py
python/tests/backend/: test_chatmodel.py  test_message.py
python/tests/parsers/: line_prefix_test.py
python/tests/runners/: test_default_runner.py
python/tests/templates/: test_templates.py
python/tests/tools/: test_duckduckgo.py  test_mcp_tool.py  test_opemmeteo.py  test_wikipedia.py
python/tests/utils/: test_custom_logger.py
python/tests/workflows/: multi_agents.py  test_workflow.py
(+807 files in other folders)
