[project]
name = "beeai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Radek Ježek", email = "radek.jezek@ibm.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agentcommunicationprotocol>=0.0.4",
    "aiohttp>=3.11.11",
    "anyio>=4.8.0",
    "asgiref>=3.8.1",
    "fastapi[standard]>=0.115.7",
    "kink>=0.8.1",
    "orjson>=3.10.15",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "structlog>=25.1.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120

[project.scripts]
beeai-server = "beeai_server.scripts:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["static/"]
