[project]
name = "beeai-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Radek Ježek", email = "radek.jezek@ibm.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
]

[project.scripts]
beeai = "beeai_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
